2002-10-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-emblem-utils.[ch]:
	New common utils for emblems

	* components/emblem/nautilus-emblem-view.c:
	* libnautilus-private/nautilus-icon-factory.c:
	* src/file-manager/fm-properties-window.c:
	* src/nautilus-property-browser.c:
	Use the common emblem utils.

	REQUIRES libgnomeui HEAD
	
2002-10-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.[ch]:
	Add display_name argument to nautilus_icon_factory_get_pixbuf_for_icon
	and nautilus_icon_factory_get_pixbuf_from_name.
	
	* libnautilus-private/nautilus-bookmark.c:
	* libnautilus-private/nautilus-icon-container.c:
	* src/nautilus-sidebar-title.c:
	Fix up according to change above
	
	* components/emblem/Makefile.am:
	* components/emblem/Nautilus_View_emblem.server.in.in:
	* components/emblem/libmain.c: (emblem_shlib_make_object):
	* components/emblem/nautilus-emblem-view-iids.h:
	* components/emblem/nautilus-emblem-view.c:
	New emblem sidebar from James Willcox <jwillcox@gnome.org>,
	with some changes by me.

2002-10-02  James Willcox  <jwillcox@gnome.org>

	* components/Makefile.am:  Added emblems component
	* configure.in:  same

2002-10-02  Mark McLoughlin  <mark@skynet.ie>

	* acconfig.h: define HAVE_GTK_MULTIHEAD for
	egg-screen-exec methods.

	* configure.in: require gtk 2.1.0 and don't
	define HAVE_GTK_MULTIHEAD.

	* libnautilus-private/nautilus-multihead-hacks.h: kill.

	* libnautilus-private/nautilus-directory-background:
	(make_root_pixmap), (set_root_pixmap): use
	 gdk_screen_get_display instead of assuming the default
	display.

	* src/nautilus-shell.c: (restore_one_window_callback):
	add backwards compat support for sessions without
	a screen number.

2002-10-02  Mark McLoughlin  <mark@skynet.ie>

	* libnautilus-private/nautilus-program-choosing.c:
	(nautilus_launch_application_from_command):
	s/eel_gnome_screen_exec/eel_gnome_exec..._on_screen/g
