@@ -1,3 +1,7 @@
+2002-10-04  James Willcox  <jwillcox@gnome.org>
+
+	* components/emblem/nautilus-emblem-view.h:  Added missing file.
+
 2002-10-04  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/Makefile.am:
